--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
 HOST=0.0.0.0
 PORT=1337
+STRIPE_SK=
+
+DATABASE_URL=
+
+AWS_ACCESS_KEY_ID=AKIAYN567UAECTIKEZCF
+AWS_ACCESS_SECRET=xrWwEynoU7z/2XsDmilvHAMmy14eiaaLlE3tZlVc
+AWS_REGION=us-west-1
+AWS_BUCKET=portald-imagens
