--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {},
   "dependencies": {
     "knex": "0.21.18",
+    "mysql": "^2.18.1",
     "sqlite3": "5.0.0",
     "strapi": "3.6.0",
     "strapi-admin": "3.6.0",
@@ -23,6 +24,7 @@
     "strapi-plugin-i18n": "3.6.0",
     "strapi-plugin-upload": "3.6.0",
     "strapi-plugin-users-permissions": "3.6.0",
+    "strapi-provider-upload-aws-s3": "^3.6.0",
     "strapi-utils": "3.6.0"
   },
   "author": {
