--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ STRIPE_SK=
 
 DATABASE_URL=
 
-AWS_ACCESS_KEY_ID=AKIAYN567UAECTIKEZCF
-AWS_ACCESS_SECRET=xrWwEynoU7z/2XsDmilvHAMmy14eiaaLlE3tZlVc
+AWS_ACCESS_KEY_ID=
+AWS_ACCESS_SECRET=
 AWS_REGION=us-west-1
 AWS_BUCKET=portald-imagens
